scrollbar, navbar fixed top

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,12 @@
 .min {
-  min-height: 100% !important;
+  position: relative;
+}
+app-navbar {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 10;
+}
+router-outlet> {
+  margin: 0px;
 }
