--- a/src/app/components/shared/friends/friends.component.scss
+++ b/src/app/components/shared/friends/friends.component.scss
@@ -6,7 +6,7 @@
 }
 .containerMain {
   margin-top: 50px;
-  background: var(--dark);
+  background: var(--main);
   border-radius: var(--rad);
   padding:20px 20px 70px 20px;
   clip-path: polygon(52% 0, 100% 0, 100% 84%, 50% 100%, 0 85%, 0 0);
@@ -24,13 +24,13 @@
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+  border-radius: 10px !important;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #41454d;
-  border-radius: 10px;
+  border-radius: 10px !important;
 }
 
 /* Handle on hover */
