--- a/src/app/components/shared/navbar/navbar.component.scss
+++ b/src/app/components/shared/navbar/navbar.component.scss
@@ -8,6 +8,9 @@
   font-size: 20px;
   transition: all 0.3s;
 }
+.navbar-toggler {
+  border: 1px solid #ffb351;
+}
 .navbar-toggler:focus {
   outline: none;
 }
