--- a/src/app/components/teacher/new-classrom/new-classrom.component.scss
+++ b/src/app/components/teacher/new-classrom/new-classrom.component.scss
@@ -1,6 +1,6 @@
 .containerMain {
   margin-top: 50px;
-  background: darkcyan;
+  background: var(--main);
   border-radius: var(--rad);
   padding:20px 20px 70px 20px;
 
