--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,10 +3,14 @@ body, html {
   margin: 0;
   height: 100%;
   font-family: Lato, serif;
+  overflow-x: hidden;
+}
+body {
+  padding-top: 71px;
 }
 .main {
   --width: 720px;
-  --main: #255F85; //main color
+  --main: darkcyan; //main color
   --rad: 12px; //radious
   --submit: #E9724C; //color of submit buttons
   --submitHover: #e9a04c; //color of submit buttons
@@ -16,3 +20,22 @@ body, html {
 }
 
 
+::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 0;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+  width: 12px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #cc5207;
+}
